--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <artifactId>htmlunit-driver</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>20.1.0</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- tag::allButSelenium[] -->
     </dependencies>
 
