--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <version>1.0.0.GA</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- end::allButSelenium[] -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -81,12 +87,19 @@
             <artifactId>htmlunit-driver</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>20.1.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+
         <!-- tag::allButSelenium[] -->
     </dependencies>
 
