--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.datasource.generate-unique-name=false
 spring.datasource.name=tacocloud
+#spring.security.oauth2.client.registration.facebook.client-id=${FACEBOOK_CLIENT_ID} client-secret=${FACEBOOK_CLIENT_SECRET} scope=${FACEBOOK_SCOPE}
