--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.generate-unique-name=false
-spring.datasource.name=tacocloud
+spring.datasource.url=jdbc:mysql://localhost:3306/taco_cloud
+spring.datasource.username=root
+spring.datasource.password=The_Sanctuary_03
 #spring.security.oauth2.client.registration.facebook.client-id=${FACEBOOK_CLIENT_ID} client-secret=${FACEBOOK_CLIENT_SECRET} scope=${FACEBOOK_SCOPE}
