--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/taco_cloud
 spring.datasource.username=root
 spring.datasource.password=The_Sanctuary_03
 #spring.security.oauth2.client.registration.facebook.client-id=${FACEBOOK_CLIENT_ID} client-secret=${FACEBOOK_CLIENT_SECRET} scope=${FACEBOOK_SCOPE}
+
+#Application Properties
+taco.orders.pageSize=20
