Discount code feature added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.datasource.password=The_Sanctuary_03
 
 #Application Properties
 taco.orders.pageSize=20
+taco.discount.codes.d10 = 10
 
 logging.level.tacos=DEBUG
